feat(library): swap queue column layout, cluster transport toggles in headers, and prepare v1.0.0-beta.53 release